fix: padding makes partly visible cards below

--- a/shelter/assets/sass/_pets-page-slider.scss
+++ b/shelter/assets/sass/_pets-page-slider.scss
@@ -51,6 +51,18 @@
             background: url("../../assets/images/pets-freddie.png"), #FAFAFA;
         }
     }
+
+    @media (max-width: 969px) {
+        &:nth-child(n+7) {
+            display: none;
+        }
+    }
+
+    @media (max-width: 639px) {
+        &:nth-child(n+4) {
+            display: none;
+        }
+    }
 }
 
 .slider-btns {
